[metadata]
author = Daniel Ebi
author_email = daniel.ebi@kit.edu
description = MicroPPO - A PPO-based approach for managing power flows in micro-grid.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EbiDa/MicroPPO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3.0 or later (AGPL-3.0-or-later)
    Operating System :: OS Independent